--- a/2023-1/beamer/C13_md1.tex
+++ b/2023-1/beamer/C13_md1.tex
@@ -1,7 +1,7 @@
 %\documentclass{beamer} 
 \documentclass[handout]{beamer} % sin pausas
 \usetheme{CambridgeUS}
-% \setbeamertemplate{background}[grid][step=8 ] % cuadriculado
+%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -101,7 +101,7 @@
     \\[\baselineskip] ${}^{}$
     \\[\baselineskip]
 }
-\date[05/05/2022]{5 de mayo  de 2022}
+\date[02/05/2023]{2 de mayo  de 2023}
 
 \newcommand{\mcd}{\operatorname{mcd}}
 \newcommand{\mcm}{\operatorname{mcm}}
@@ -132,36 +132,7 @@
 
     
 
-    
     \begin{frame}
-        
-        \begin{itemize}
-            \item[$\bullet$] El proceso se detiene en el primer resto $r_i$  igual a $0$.
-            \vskip .4cm\pause
-            \item[$\bullet$]  El proceso debe detenerse, porque cada resto no nulo es positivo y estrictamente menor que el anterior.
-            \vskip .4cm\pause
-            \item[$\bullet$]  Este procedimiento es conocido como el {\em algoritmo de Euclides}.
-        \end{itemize}
-        \pause
-        
-        \vskip .4cm
-        \begin{teorema} Sean  $a$ y $b$ enteros con $b >0$, entonces el máximo común divisor  es el último resto no nulo obtenido en el algoritmo de Euclides ($r_k$ de la filmina anterior). 
-        \end{teorema}
-        \pause
-        \begin{idea}
-            $r_{i-1}=r_{i}q_{i} + r_{i+1} \Rightarrow \mcd(r_{i-1},r_{i}) = \mcd(r_{i} , r_{i+1})$. Luego,
-            \begin{multline*}
-                \mcd(a,b) = \mcd(r_{0},r_{1}) = \mcd(r_{1},r_{2}) = \cdots \\
-                \cdots = \mcd(r_{k-1},r_{k})  = \mcd(r_{k},0) = r_k. \qed
-            \end{multline*}
-            
-            
-        \end{idea}
-    \end{frame}
-    
-    \begin{frame}
-        
-        
         Ejemplifiquemos el algoritmo de Euclides.\pause
         
         \vskip .4cm
@@ -178,12 +149,9 @@
                 18&=6\cdot3 + 0&\quad&\text{ entonces  }& (18,6) &= (6,0) = 6 
             \end{alignat*}\pause
             Por lo tanto $(2406,654)=6$.
-            
-            
-            
         \end{solucion}
-        
     \end{frame}
+
     
     \begin{frame}[fragile=singleslide]
         
@@ -212,7 +180,61 @@
         
     \end{frame}
     
+    \begin{frame}
+        
+        \begin{teorema}\label{prop-d-comb-lin}
+            Sean $a,b \in \Z$, alguno de ellos no nulo. Entonces,  existen $s, t \in \Z$ tal que 
+            \begin{equation*}
+                \operatorname{mcd}(a,b) = sa +tb.
+            \end{equation*}
+        \end{teorema}
+        \vskip .2cm \pause
+        {\color{blue}Demostración.}\pause 
+        \vskip .2cm
+        Supongamos que $b>0$ y sea $d=\mcd(a,b)$. Entonces, $d=r_{k}$ y
+        $$
+        (e_{k-1}) \quad \Rightarrow \quad  d=r_{k-2} -r_{k-1}q_{k-1}.
+        $$ 
+            
+        Así, $ d = s_{k}r_{k-2} +t_{k}r_{k-1}$, donde $s_{k}=1$ y $t_{k}=-q_{k-1}$ . Usando la ecuación  ($e_{k-2}$), sustituyendo $r_{k-1}$ en términos de $r_{k-3}$ y $r_{k-2}$ obtenemos
+        $$
+        d= s_{k}(r_{k-3}-r_{k-2}q_{k-2}) + t_{k}r_{k-3} =  s_{k-1}r_{k-3} +t_{k-1}r_{k-2}
+        $$
+        donde $s_{k-1} = s_{k} + t_{k} $ y $t_{k-1}= -s_{k}q_{k-2}$.  Aplicando  repetidas veces las ecuaciones del algoritmo de Euclides obtenemos,
+        $$
+        d =  s_{2}r_{0} +t_{2}r_{1} = s_{2}a +t_{2}b.
+        $$
+        \qed
+    \end{frame}
+
+
+
+    \begin{frame}
+        \frametitle{}
+
+        \begin{corolario}
+            Sean $a$ y $b$ enteros, $b$ no nulo, entonces
+            $$
+            (a,b) = 1 \Leftrightarrow \text{existen $s,t \in \mathbb Z$ tales que $1 = sa+tb$.}
+            $$
+        \end{corolario}
+        \pause
+        
+    \begin{definicion}
+        Si  $(a,b)=1$ entonces decimos que $a$ y $ b$ son {\em coprimos}\index{coprimos}.
+    \end{definicion}
+
+
+    \begin{observacion}
+        \textit{NO} es cierto  que si existen $s,t \in \mathbb Z$ tales que $d = sa+tb$ $\Rightarrow$ $d = (a,b)$.
+\vskip .4cm
+        Por ejemplo, $4 = 2 \cdot 6 + (-2) \cdot 4$ y $(6,4) =2$. 
+    \end{observacion}
+        
+        
     
+    \end{frame}
+
     
     \begin{frame}\label{film-alg-eucl-2}
         
@@ -233,11 +255,11 @@
         Lo cual nos dice que $r_i$  puede ser calculado usando $r_{i-1}$ y $r_{i-2}$.
         \pause
         \begin{align*}
-            r_{k} \quad &\text{puede ser calculado con $r_{k-1}$ y $r_{k-2} $ } \\
-            r_{k-1} \quad &\text{puede ser calculado con $r_{k-2}$ y $r_{k-3} $ } \\
-            \cdots\quad &\cdots \\
-            r_{3} \quad &\text{puede ser calculado con $r_{2}$ y $r_{1} $ } \\
-            r_{2} \quad &\text{puede ser calculado con $r_{1} =b$ y $r_{0}=a $ } \\
+            (e_{k-1}) & \Rightarrow & d &= r_{k} =   r_{k-2}-r_{k-1}q_{i} = s_kr_{k-2}+ t_k r_{k-1} \\
+            (e_{k-2}) & \Rightarrow &d &= s_kr_{k-2}+ t_k (r_{k-3}-r_{k-2}q_{k-2}) =s_{k-1}r_{k-3}+ t_{k-1} r_{k-2} \\
+            &\cdots&\cdots&\\
+            (e_{2}) & \Rightarrow & d &= s_4r_{2}+ t_k (r_{1}-r_{2}q_{2}) =s_{3}r_{1}+ t_{3} r_{2} \\
+            (e_{1}) & \Rightarrow &d &= s_3r_{1}+ t_3 (r_{0}-r_{1}q_{1}) =s_{2}r_{0}+ t_{2} r_{1} =s_{2}a+ t_{2}b.
         \end{align*}
         
         
@@ -352,6 +374,8 @@
         
     \end{frame}
     
+
+
     
     
     \begin{frame}
