Teminadas de corregir los beamers de clase 14 y 15

--- a/2023-1/beamer/C14_md1.tex
+++ b/2023-1/beamer/C14_md1.tex
@@ -1,9 +1,7 @@
-%\documentclass[handout]{beamer} % sin pausas
-\documentclass{beamer} 
-\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
-
+%\documentclass{beamer} 
+\documentclass[handout]{beamer} % sin pausas
 \usetheme{CambridgeUS}
-
+%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -102,7 +100,7 @@
     \\[\baselineskip] ${}^{}$
     \\[\baselineskip]
 }
-\date[10/05/2022]{10 de mayo de 2022}
+\date[04/05/2023]{4 de mayo de 2023}
 
 
 
@@ -201,7 +199,7 @@
 
         \begin{observacion}
 			\begin{itemize}
-				\item[$\circ$] Por el teorema,  decimos que todo número  \textit{admite una factorización con factores primos}.
+				\item[$\circ$] Por el teorema,  decimos que todo número entero \textit{admite una factorización con factores primos}.
 			\end{itemize}
 			
 		\end{observacion}
