--- a/2023-1/beamer/C15_md1.tex
+++ b/2023-1/beamer/C15_md1.tex
@@ -1,8 +1,7 @@
-%\documentclass[handout]{beamer} % sin pausas
-\documentclass{beamer} 
-\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
-
+%\documentclass{beamer} 
+\documentclass[handout]{beamer} % sin pausas
 \usetheme{CambridgeUS}
+%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -101,7 +100,7 @@
     \\[\baselineskip] ${}^{}$
     \\[\baselineskip]
 }
-\date[12/05/2022]{12 de mayo de 2022}
+\date[09/05/2023]{9 de mayo de 2023}
 
 
 
