--- a/2023-1/beamer/C17_md1.tex
+++ b/2023-1/beamer/C17_md1.tex
@@ -1,8 +1,7 @@
-%\documentclass[handout]{beamer} % sin pausas
-\documentclass{beamer} % con pausas
-\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
-
+%\documentclass{beamer} 
+\documentclass[handout]{beamer} % sin pausas
 \usetheme{CambridgeUS}
+%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -102,7 +101,7 @@
     \\[\baselineskip] ${}^{}$
     \\[\baselineskip]
 }
-\date[19/05/2022]{19 de mayo de 2022}
+\date[16/05/2023]{16 de mayo de 2023}
 
 
 
@@ -123,15 +122,20 @@
             \end{enumerate}
         \end{lema}
         
+    \vskip 3cm
     \end{frame}
     
     
     \begin{frame}
-        \begin{proof} \pause 
-            \noindent({a})  Escribamos el número binomial de otra forma: 
+        {}
+
+        {\color{blue}Demostración}\pause 
+        \vskip .2cm
+
+        \noindent({a})  Escribamos el número binomial de otra forma: 
             $$
             \binom{p}{r}=\frac{p!}{r!(p-r)!}=p\cdot\,\frac{(p-1)!}{r!(p-r)!},
-            $$ \pause 
+            $$ 
             luego 
             \begin{equation*}\label{binp}
                 \binom{p}{r} \cdot r!(p-r)! = p \cdot(p-1)!.
@@ -148,10 +152,6 @@
             \end{enumerate}
             
             
-            
-            
-            
-        \end{proof}
     \end{frame}
     
     \begin{frame}
