--- a/2023-1/beamer/C19_md1.tex
+++ b/2023-1/beamer/C19_md1.tex
@@ -1,8 +1,7 @@
-%\documentclass[handout]{beamer} % sin pausas
-\documentclass{beamer} % con pausas
-\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
-
+%\documentclass{beamer} 
+\documentclass[handout]{beamer} % sin pausas
 \usetheme{CambridgeUS}
+%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 
 \usepackage{etex}
@@ -103,7 +102,7 @@
     \\[\baselineskip] ${}^{}$
     \\[\baselineskip]
 }
-\date[02/06/2022]{2 de junio de 2022}
+\date[01/06/2023]{1 de junio de 2023}
 
 
 
@@ -163,7 +162,7 @@
     \end{frame}
     
     \begin{frame}
-        Sin embargo, si dibujamos $G_2$ diferente (``dando vuelta $w$'' y  rotando), obtenemos: \pause
+        Sin embargo, si dibujamos $G_2$ diferente (``dando vuelta $w$ alrededor del eje $uv$'' y  rotando), obtenemos: \pause
         
         \begin{figure}[ht]
             \begin{center}
