--- a/2023-1/beamer/C22_md1.tex
+++ b/2023-1/beamer/C22_md1.tex
@@ -1,8 +1,7 @@
+%\documentclass{beamer} 
 \documentclass[handout]{beamer} % sin pausas
-%\documentclass{beamer} % con pausas
-%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
-
 \usetheme{CambridgeUS}
+%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -100,7 +99,7 @@
     \\[\baselineskip] ${}^{}$
     \\[\baselineskip]
 }
-\date[14/06/2022]{14 de junio de 2022}
+\date[13/06/2023]{13 de junio de 2023}
 
 
 
