--- a/2023-1/beamer/C23_md1.tex
+++ b/2023-1/beamer/C23_md1.tex
@@ -1,8 +1,7 @@
+%\documentclass{beamer} 
 \documentclass[handout]{beamer} % sin pausas
-%\documentclass{beamer} % con pausas
-%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
-
 \usetheme{CambridgeUS}
+%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 
 \usepackage{etex}
@@ -102,7 +101,7 @@
     \\[\baselineskip] ${}^{}$
     \\[\baselineskip]
 }
-\date[16/06/2022]{16 de junio de 2022}
+\date[15/06/2023]{15 de junio de 2023}
 
 
 
