--- a/2023-1/beamer/C18_md1.tex
+++ b/2023-1/beamer/C18_md1.tex
@@ -1,8 +1,7 @@
+%\documentclass{beamer} 
 \documentclass[handout]{beamer} % sin pausas
-%\documentclass{beamer} % con pausas
-%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
-
 \usetheme{CambridgeUS}
+%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 
 \usepackage{etex}
@@ -101,7 +100,7 @@
     \\[\baselineskip] ${}^{}$
     \\[\baselineskip]
 }
-\date[31/05/2022]{31 de mayo de 2022}
+\date[18/05/2023]{18 de mayo de 2023}
 
 
 
