--- a/2023-1/apunte/Cap.apendices.tex
+++ b/2023-1/apunte/Cap.apendices.tex
@@ -867,9 +867,7 @@ aristas, vértices en el medio. Por ejemplo, $H$ puede lucir como en la fig. \re
 
 \begin{section}{El teorema de los cuatro colores} \label{Ap4.3}
 
-Juntaremos ahora lo que hemos visto en esta sección con lo que vimos en la anterior, para tratar uno de los problemas mas famosos y recalcitrantes de la teoría de grafos, a saber: ¿cuántos colores se necesitan para colorear un grafo planar? En otras palabras, si quiero estar seguro de poder colorear propiamente los vértices de cualquier grafo planar, ¿cuántos colores necesito tener? De hecho, una pregunta más básica sería si existe una cantidad finita de colores que me permitan colorear cualquier tipo de grafo planar, por grande que sea. (Es claro que la respuesta para grafos en general es negativa, pues $K_n$ requiere $n$ colores.) Como $K_4$ es planar, sabemos que necesitamos por lo menos $4$ colores. No podemos decir que necesitamos necesariamente $5$, pues hemos visto que $K_5$ no es planar. Pero, podría haber otro grafo, complicado pero planar, que requiera $5$, o más, colores. A mediados del siglo pasado la conjetura de que bastan $4$ colores fue hecha, y en $1\,879$ A. Kempe publicó una prueba de este hecho, que paso a llamarse el teorema de los cuatro colores. Desafortunadamente para Kempe, en $1\,889$ (diez años después) otro matemático, P. Heawood, probó que la prueba de Kempe contenía un error. Heawood no fue completamente destructivo: mostró que adaptando la prueba de Kempe, podía probarse que con $5$ colores bastaba para colorear cualquier grafo planar (el teorema de los cinco colores). Así pues, quedo planteado el problema de saber si el teorema de los cuatro colores era cierto, o bien si existía algún grafo planar para el cual $5$ colores fueran necesarios. (Pero, al menos, gracias a Heawood, no era necesario buscar alguno que necesitara $6$, o $7$ u $8$ colores, pues no existen, gracias al teorema de los cinco colores.) De hecho, en ese mismo artículo, Heawood probó más cosas: existe algo llamado género de un grafo, que es un número entero no negativo. Heawood demostró que existía
-una \index{género de un grafo} fórmula (expresión aritmética) que para cada género $g\ge 1$ da la cantidad de colores que permite colorear todos los grafos de género $g$. Los grafos planares tiene género igual a $0$ y aplicando la fórmula para $g=0$ obtenemos el número $4$. Sin embargo, Heawood pudo probar que la fórmula es
-válida si $g$ es mayor o igual a 1. El hecho de que esta fórmula existiera ``convenció'' a mucha gente de que el teorema de los cuatro colores debía ser cierto y que una prueba no tardaría en hallarse. Sin embargo, pese al esfuerzo de muchos matemáticos y pese al desarrollo de la teoría, el teorema de los cuatro colores no pudo probarse hasta $1975$, cuando dos matemáticos \index{Teorema de los cuatro colores} norteamericanos, K. Appel y W. Haken, lo probaron. Más aún, no pudieron probarlos solos, sino que debieron usar la ``ayuda'' de un poderoso (para esa época) computador. Así, aún cuando el teorema fue probado, un gran sentimiento de desconfianza se generó, sobretodo en una época en la cual el acceso fácil a tiempo de computador no era común. Veinte años han pasado y la prueba ahora ha sido controlada numerosas veces y no genera tanta resistencia como antes. Aún así, si alguien pudiese publicar una prueba que fuese ``leíble por humanos'' sería muy bien bienvenido.
+Juntaremos ahora lo que hemos visto en esta sección con lo que vimos en la anterior, para tratar uno de los problemas mas famosos y recalcitrantes de la teoría de grafos, a saber: ¿cuántos colores se necesitan para colorear un grafo planar? En otras palabras, si quiero estar seguro de poder colorear propiamente los vértices de cualquier grafo planar, ¿cuántos colores necesito tener? De hecho, una pregunta más básica sería si existe una cantidad finita de colores que me permitan colorear cualquier tipo de grafo planar, por grande que sea. (Es claro que la respuesta para grafos en general es negativa, pues $K_n$ requiere $n$ colores.) Como $K_4$ es planar, sabemos que necesitamos por lo menos $4$ colores. No podemos decir que necesitamos necesariamente $5$, pues hemos visto que $K_5$ no es planar. Pero, podría haber otro grafo, complicado pero planar, que requiera $5$, o más, colores. A mediados del siglo pasado la conjetura de que bastan $4$ colores fue hecha, y en $1\,879$ A. Kempe publicó una prueba de este hecho, que paso a llamarse el teorema de los cuatro colores. Desafortunadamente para Kempe, en $1\,889$ (diez años después) otro matemático, P. Heawood, probó que la prueba de Kempe contenía un error. Heawood no fue completamente destructivo: mostró que adaptando la prueba de Kempe, podía probarse que con $5$ colores bastaba para colorear cualquier grafo planar (el teorema de los cinco colores). Así pues, quedo planteado el problema de saber si el teorema de los cuatro colores era cierto, o bien si existía algún grafo planar para el cual $5$ colores fueran necesarios. (Pero, al menos, gracias a Heawood, no era necesario buscar alguno que necesitara $6$, o $7$ u $8$ colores, pues no existen, gracias al teorema de los cinco colores.) De hecho, en ese mismo artículo, Heawood probó más cosas: definió el \textit{género de un grafo}, que es un número entero no negativo, y que no daremos aquí su definición. Heawood demostró que existía una \index{género de un grafo} fórmula (expresión aritmética) que para cada género $g\ge 1$ da la cantidad de colores que permite colorear todos los grafos de género $g$. Los grafos planares tiene género igual a $0$ y aplicando la fórmula para $g=0$ obtenemos el número $4$. Sin embargo, Heawood pudo probar que la fórmula es válida si $g$ es mayor o igual a 1. El hecho de que esta fórmula existiera ``convenció'' a mucha gente de que el teorema de los cuatro colores debía ser cierto y que una prueba no tardaría en hallarse. Sin embargo, pese al esfuerzo de muchos matemáticos y pese al desarrollo de la teoría, el teorema de los cuatro colores no pudo probarse hasta $1975$, cuando dos matemáticos \index{Teorema de los cuatro colores} norteamericanos, K. Appel y W. Haken, lo probaron. Más aún, no pudieron probarlos solos, sino que debieron usar la ``ayuda'' de una poderosa (para esa época) computadora. Así, aún cuando el teorema fue probado, un gran sentimiento de desconfianza se generó, sobretodo en una época en la cual el acceso fácil a tiempo de computadora no era común. Decenas de años han pasado y la prueba ahora ha sido controlada numerosas veces y no genera tanta resistencia como antes. Aún así, si alguien pudiese publicar una prueba que fuese ``leíble por humanos'' sería muy bien bienvenido.
 
 Obviamente por lo dicho arriba, no daremos una prueba del teorema de los cuatro colores. Sí daremos una del teorema de los cinco colores\index{Teorema de los cinco colores}, mencionando donde se encuentra la dificultad de la demostración del teorema de los  cuatro colores, y dando una idea de que es lo que Appel y Haken (y el computador) hicieron. 
 
