--- a/2023-1/beamer/C21_md1.tex
+++ b/2023-1/beamer/C21_md1.tex
@@ -231,9 +231,14 @@
     \begin{frame}
     
 
-        C. Hierholzer (1840-1871) mostró, poco antes de su muerte, un algoritmo fácilmente implementable para encontrar un circuito euleriano  para cualquier grafo  con vértices de grado  par. \pause
+        C. Hierholzer (1840-1871) mostró, poco antes de su muerte, un algoritmo fácilmente implementable para encontrar un circuito euleriano  para cualquier grafo  con vértices de grado  par. 
+
+        \pause
+        \vskip .4cm
         
-        \vskip .6cm
+        Artículo: \href{https://eudml.org/doc/156599}{Ueber die Möglichkeit, einen Linienzug ohne Wiederholung und ohne Unterbrechung zu umfahren}. Mathematische Annalen volume 6, pp. 30–32 (1873) (en alemán). \pause
+        
+        \vskip .4cm
         
         El  mismo algoritmo sirve para grafos con dos vértices de grado impar.
         
@@ -247,16 +252,14 @@
             Un \textit{recorrido maximal}  es un recorrido que respetando la condición de no repetir aristas no es posible continuarlo.  
         \end{definicion}
 
-        \vskip .2cm
-
-        \vskip .6cm\pause
+    
     \end{frame}
         
     \begin{frame}\frametitle{Algoritmo de Hierholzer: idea clave}\pause
         
         La idea clave del algoritmo de Hierholzer  es la siguiente:  en un grafo de valencias pares (conexo o no conexo) todo recorrido maximal termina en el vértice original. Veamos la demostración de esta afirmación.
 
-        \vskip .4cm\pause
+        \vskip .2cm\pause
 
         \begin{itemize}
             \item Sea $x$ un vértice del grafo  que será donde comenzará la caminata.
